# AVENUE-Deepfake-Detector

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: analysis.py  data_loader.py  models.py  predictor.py  trainer.py
