[project]
name = "rppg-deepfake-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.5.1",
    "ipywidgets>=8.1.7",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.5",
    "mediapipe>=0.10.21",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
